tdf#170205: drop NoYieldLock mode

Added in commit 4baec725e0dc0713f0d47003e9b10bc3b62f56ff (WIN run
main thread redirects ignoring SolarMutex, 2017-09-26), it tried to
handle SendMessage calls without releasing SolarMutex in the calling
code. The idea seemed to be, that the calling thread keeps holding
SolarMutex while waiting for the main thread, and main thread has
this mode that turns all calls to acquire/release/test solar mutex
to noop (which was safe, since the thread holding the mutex is known
to be blocked).

Unfortunately, that doesn't work. The many hangs discovered since
then (e.g., commit 1e2e51607a163021ef1fb1fb0d217266bd448173 - Try
to use CoWaitForMultipleHandles magic to handle COM message loop,
2025-01-10) required to unlock solar mutex when calling SendMessage
(implemented in commit 23afeaedf4d4a03943338fc39ae41f5c423e5997 -
tdf#168431: Release solar mutex when sending window message to main
thread, 2025-09-09). It made it possibe, that SolarMutex::doRelease
called from non-main thread got false from IsCurrentThread, because
the NoYieldLock mode was active, and SalYieldMutex::IsCurrentThread
only checked that current thread is main; that caused abort().

This change removes this special mode. The intention is, that every
call to SendMessage must release solar mutex, and allow main thread
to lock it. Hope this is a reasonable approach.

Change-Id: I838be4d366b24727cd93610d9cacfbe14992923e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201007
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201694
Tested-by: allotropia jenkins <jenkins@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>