vcl/inc/win/salinst.h
@@ -36,7 +36,6 @@ public:
     HWND                mhComWnd;
 
     osl::Condition      maWaitingYieldCond;
-    unsigned            m_nNoYieldLock;
 
 public:
     WinSalInstance();
